Specified no data collection.

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "servicenow-admin-helper@DaBenjle",
-      "strict_min_version": "57.0"
+      "strict_min_version": "57.0",
+      "data_collection_permissions": false
     }
   },
   "permissions": [
