Reconfigured manifest.json for what firefox addons expects.

--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,10 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "servicenow-admin-helper@DaBenjle",
-      "strict_min_version": "57.0",
-      "data_collection_permissions": false
+      "strict_min_version": "58.0",
+      "data_collection_permissions": {
+        "required": ["none"]
+      }
     }
   },
   "permissions": [
